# GalaxyDevelopers-DevSystem

./: .env  .eslintrc.js  .gitignore  01_CRITICAL_FIXES_VERIFICATION.md  01_SERVICE_DISCOVERY_ANALYSIS.md  02_INFRASTRUCTURE_VERIFICATION.md  02_ORCHESTRATION_MASTER_PLAN.md  03_IMPLEMENTATION_TIMELINE.md  03_PERFORMANCE_VERIFICATION.md  04_DAILY_PROGRESS_DAY_1_MORNING.md  04_QUALITY_VERIFICATION.md  05_MONITORING_VERIFICATION.md  06_FINAL_ACCEPTANCE_REPORT.md  ACTIVATE_DOC_SYSTEM.sh  AUTOSTART_ALL_SERVICES.sh  CLAUDE.md  COMPLETE_SECURITY_IMPLEMENTATION.md  DOC_SYSTEM_REDME.md  FINAL_SECURITY_REPORT.md  GalaxyDevelopers AI Chat  HORIZON_1_AUDIT_SUMMARY.md  HORIZON_1_RE_VERIFICATION_REPORT.md  PERPLEXITY_RESEARCH_QUERIES.md  README.md  SECURITY_FIXES_REPORT.md  START_INTEGRATED_SYSTEM.sh  SYSTEM_LAUNCH_SUCCESS.md  TEST_DOC_SYSTEM.sh  database-config.js  database_migration.js  database_migration_jwt.sql  database_migration_salt.sql  docker-compose.monitoring.yml  eslint.config.mjs  galaxy-logs.sh  galaxy-restart.sh  galaxy-start.sh  galaxy-status.1m.sh  galaxy-status.sh  galaxy-stop.sh  (+16 more)
STANDARTS_AI_DOCUMENT_SYSTEM/: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDELINES.md  Dockerfile.ai-auditor  Dockerfile.dev_isolation  Dockerfile.developer-isolation  Dockerfile.web-dashboard  MID_DEVELOPMENT_STATUS_REPORT.md  PROJECT_INDEX.md  PROJECT_VAULT.md  README.md  TEST_REAL_BLOCK.txt  ai_auditor.py  config_manager.py  conftest.py  developer_control_schema.sql  docker-compose.minimal.yml  docker-compose.yml  file_monitor.py  (+16 more)
(+1837 files in other folders)
